# market_analysis

./: .gitignore  CAHIER_DES_CHARGES.md  README.md  diagram_algo.drawio  packages.txt  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
data/data_supply/html_facebook/: 9_circles  Asso_Why_Not  Bains_de_Minuit_productions  Bang_Bang_!  Billy_Society_Production  Bisenesse  Cerebral  Chez_Mamie  Collectif_FMR  Collectif_Padego  Desert_Land  Kohezion  (+46 more)
scripts/analysis_demand/: analysis.ipynb
source/: columns_definition.py  columns_definition_2.py  columns_definition_new.py  new_prompt.txt  pipeline.py  prompt.txt  query_url.py  study_text.py  transform.py
tests/: complex_dfs.p  df.p  df_consumer_behavior.p  df_facebook.p  df_facebook_temp.p  df_final.p  df_new_prompt_temp.p  df_perso_websites.p  df_personal_websites.p  df_personal_websites_temp.p  df_raw.p  df_simple.p  dic.p  hand_webscrapping.ipynb  json_saved  st_personal_websites.p  test.ipynb  test_new_prompt.ipynb  transform.ipynb
tests/data/: df_activities.p  df_functions.p  df_information.p  df_members.p  df_objectives.p  df_offers.p
tests/dataset_demographie/: modelization_segmentation_demography.ipynb
tests/experiment/: make_dataset.ipynb  transform.ipynb
tests/experiment_v1/: complex_dfs.p  dashboard.py  df_raw.p  df_simple.p  dic.p  offers_dashboard.py  transform.ipynb
tests/experiment_v2/: columns_definition.py  complex_dfs.p  df_personal_website_temp.p  df_raw.p  df_simple.p  dic.p  list_dic_scrap_hdf.p  make_dataset.ipynb  prompt.txt
tests/textes/: https___www_artpointm_com
(+80 files in other folders)
